# ssrcms

./: .env-back  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  app.sh  synaptic.toml.example  unittest.sh  userdata.sh
.github/workflows/: release.yml
admin/: Cargo.toml
admin/builder-ui/: index.html  package-lock.json  package.json  vite.config.js
admin/builder-ui/src/: App.jsx
admin/builder-ui/src/blocks/: ArchivePosts.jsx  Button.jsx  Card.jsx  Categories.jsx  ColorField.jsx  Columns.jsx  Div.jsx  Footer.jsx  Form.jsx  Header.jsx  Hero.jsx  Menu.jsx  Paragraph.jsx  PostContent.jsx  PostNavigation.jsx  Posts.jsx  Search.jsx  Sidebar.jsx  Tags.jsx  Text.jsx
admin/src/: lib.rs
admin/src/components/: mod.rs
admin/src/pages/: account.rs  appearance.rs  builder.rs  dashboard.rs  documentation.rs  forms.rs  login.rs  media.rs  media2.rs  menus.rs  mod.rs  plugins.rs  posts.rs  profile.rs  settings.rs  sites.rs  subscribe.rs  taxonomy.rs  users.rs
admin/static/: builder.js
admin/static/builder/: builder-Editor-NK3TZSR6.js  builder-Render-CU35UAWV.js  builder-chunk-2CNEFIQP.js  builder-full-KLPRWVS4.js  builder-index.js  builder-index2.js  builder-loaded-362ACKSQ.js  builder-loaded-DIHUQBWF.js  builder-loaded-SJJ63OY2.js  builder.js  index.html
admin/style/: admin.css
cli/: Cargo.toml  build.rs
cli/deployment_templates/: synaptic-signals.service
cli/src/: main.rs
cli/src/commands/: caddy.rs  dev.rs  install.rs  migrate.rs  mod.rs  plugin.rs  site.rs  theme.rs  user.rs
core/: Cargo.toml
core/src/: app_state.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  router.rs  scheduler.rs
core/src/handlers/: account.rs  archive.rs  auth.rs  comment.rs  form.rs  home.rs  metrics.rs  mod.rs  page.rs  plugin_route.rs  post.rs  post_unlock.rs  search.rs  subscribe.rs  theme_static.rs  uploads.rs
core/src/handlers/admin/: appearance.rs  appearance_editor.rs  appearance_publish.rs  appearance_upload.rs  builder.rs  comments.rs  dashboard.rs  dev_tools.rs  documentation.rs  forms.rs  media.rs  media2.rs  menus.rs  mod.rs  plugins.rs  posts.rs  profile.rs  settings.rs  sites.rs  taxonomy.rs  upload.rs  users.rs
core/src/middleware/: account_auth.rs  admin_auth.rs  ip_allowlist.rs  ip_denylist.rs  maintenance.rs  mod.rs  site.rs
core/src/models/: builder_project.rs  comment.rs  form_submission.rs  media.rs  media_folder.rs  mod.rs  nav_menu.rs  page_composition.rs  post.rs  saved_post.rs  site.rs  site_plugin.rs  site_user.rs  taxonomy.rs  user.rs
core/src/plugins/: hook_registry.rs  loader.rs  manifest.rs  mod.rs
core/src/search/: index.rs  indexer.rs  mod.rs
core/src/templates/: composer.rs  context.rs  filters.rs  functions.rs  loader.rs  mod.rs
core/src/utils/: slugify.rs
core/tests/: model_crud.rs  routes.rs  theme_e2e.rs
deployment/: Caddyfile.template  synaptic-signals.service
docs/: admin-handler-patterns.md  api-surface-gap-analysis.md  architecture-decisions.md  deployment-guide.md  development-guide.md  file-size.md  forms-guide.md  media-library.md  multi-site-guide.md  observability.md  permissions-architecture.md  plugin-api-v1.md  plugin-authoring-guide.md  plugin-system-internals.md  searchinfo.txt  security.md  seo-analytics-privacy.md  theme-authoring-guide.md  user-databases.md  visual-page-builder-design-notes.md
migrations/: 0001_create_users.sql  0002_create_media.sql  0003_create_posts.sql  0004_create_taxonomies.sql  0005_create_post_meta.sql  0006_create_site_settings.sql  0007_create_sessions.sql  0008_create_sites.sql  0009_create_site_users.sql  0010_add_site_id_to_content.sql  0011_multisite_constraints.sql  0012_add_is_protected_to_users.sql  0013_rename_admin_to_super_admin.sql  0014_fix_site_settings_pk.sql  0015_ownership_columns.sql  0016_soft_delete_users.sql  0017_site_admin_role.sql  0018_users_default_site.sql  0019_add_template_to_posts.sql  0020_create_form_submissions.sql  0021_create_form_blocks.sql  0022_create_app_settings.sql  0023_site_plugins.sql  0024_add_media_title_caption.sql  0025_add_post_password.sql  0026_add_pending_status.sql  0027_add_submitted_at_to_posts.sql  0028_comments.sql  0029_comment_body_limit.sql  0030_add_deleted_at_to_comments.sql  0031_add_ip_address_to_comments.sql  0032_create_documentation.sql  0033_add_documentation_group.sql  0034_post_views.sql  0035_media_folders.sql  0036_media_folder_id.sql  0037_saved_posts.sql  0038_taxonomy_name_unique.sql  0039_page_parent.sql  0040_nav_menus.sql  (+10 more)
plugins/global/seo/: plugin.toml
plugins/seo/: plugin.toml
plugins/seo/seo/: meta.html
scripts/: deploy-service-setup.sh  deploy-vps-setup.sh  deploy-vps.sh  install.sh  load_test.sh  seed_assign.sh  seed_posts.sh  seed_users.sh  test_builder_race.sh  unittest.sh  userdata.sh
search-index/: .managed.json  meta.json
themes/builder/blocks/: ArchivePosts.html  Button.html  Cards.html  Categories.html  Columns.html  Div.html  Footer.html  Form.html  Header.html  Hero.html  Menu.html  Paragraph.html  PostContent.html  PostNavigation.html  Posts.html  Search.html  Sidebar.html  Tags.html  Text.html  contact-form.html  nav-menu.html  posts-grid.html  text-block.html
themes/builder/layouts/: left-sidebar.html  right-sidebar.html  single-column.html
themes/claude/: theme.toml
(+80 files in other folders)
