[package]
name = "admin"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
leptos = { workspace = true, features = ["ssr"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
charts-rs = "0.3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
